feat(k8s,rollout,patch): add details to patch upgrade image in k8s pod; add details for rollout k8s pod
Signed-off-by: marslo <marslo.jiao@gmail.com>